ajustes para possibilitar cadastrar mais de um codigo por trecho

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -63,7 +63,7 @@
 					<button id="btn-exc-codigo" class="btn btn-red">Excluir</button>
 				</div>
 				<button id="btn-novo-codigo" class="btn btn-blue">Novo Código</button>
-				<button id="btn-relacionar-codigo" class="btn btn-green" hidden>Ligar Código</button>
+				<button id="btn-relacionar-codigo" class="btn btn-green" hidden>Relacionar ao Código Selecionado</button>
 			</div>
 		</div>
 	</div>
