--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -402,6 +402,9 @@ h1, h2, h3, h4, h5, h6, p, a, ul {
 	margin-top: 10px;
 }
 
+#btn-relacionar-codigo {
+	width: 70%;
+}
 
 /* ==========================================================================
    RESPONSIVO: AJUSTES
